# object_detection_opencv_cpp

./: .gitignore  .gitmodule  CMakeLists.txt  README.md  main.cpp
libs/: CMakeLists.txt  cmake_install.cmake
libs/inc/: image_processing.h  video_processing.h
libs/src/: image_processing.cpp  video_processing.cpp  webcam.cpp
